# consulate-appointment-bot

./: .gitignore  README.md  helpers.py  loader.py  main.py  pyproject.toml
forms/: __init__.py  ancara.py  ancara_queue.py  base.py
